--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,13 @@ body {
     background-position: 0 0, 2.5px 2.5px;
     background-color: var(--primary);
     width: 100%;
+    height: max-content;
+}
+
+.container {
+    width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 /* Start interface */
