--- a/styles.css
+++ b/styles.css
@@ -7,21 +7,54 @@
 }
 
 body {
-    display: grid;
-    grid-template-rows: 1fr 50px;
+    display: flex;
+    flex-direction: column;
     position: relative;
     background-image: radial-gradient(#045f56 1.5px, transparent 1.5px), radial-gradient(#045f56 1.5px, transparent 1.5px);
     background-size: 5px 5px;
     background-position: 0 0, 2.5px 2.5px;
     background-color: var(--primary);
     width: 100%;
-    height: max-content;
+    min-width: 350px;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
 
-.container {
+header {
+    height: max-content;
+    max-width: 1480px;
+    margin: auto;
+}
+
+/* Header  */
+.header {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    z-index: 10;
+}
+
+h1 {
+    position: relative;
+    font-family: 'Ysabeau SC', sans-serif;
+    font-size: clamp(1.5rem, 5vw, 3rem);
+    margin: 8px;
+    margin-bottom: 0;
+    text-align: center;
+    color: var(--secondary);
+}
+
+h1 span {
+    color: #fff;
+}
+
+.header img {
+    width: clamp(25px, 5vw, 45px);
+    position: relative;
+    transform: rotate(20deg);
 }
 
 /* Start interface */
@@ -34,22 +67,18 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-    background: #1d281ded;
+    background: rgba(0, 0, 0, 0.8);
     transition: opacity .6s ease;
 }
 
 #start-page.hide {
-    opacity: 0;
-
-}
-
-#start-page.hide {
     pointer-events: none;
+    opacity: 0;
 }
 
 .instructions {
     position: relative;
-    background-color: #1d281dce;
+    background-color: rgba(0, 0, 0, 0.8);
     text-align: justify;
     font-family: 'Ysabeau SC', sans-serif;
     font-size: clamp(1rem, 2vw, 1.8rem);
@@ -68,40 +97,23 @@ body {
 }
 
 /* Game styles */
-.game {
-    width: 100%;
-    height: 100vh;
-    padding: 15px;
-}
-
-.header {
-    position: relative;
+.container {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-grow: 1;
     width: 100%;
-    height: max-content;
-    z-index: 10;
+    max-width: 1480px;
+    height: 100%;
+    padding: 1em;
+    margin: auto;
 }
 
-h1 {
-    position: relative;
-    font-family: 'Ysabeau SC', sans-serif;
-    font-size: clamp(1.5rem, 5vw, 3rem);
-    margin-right: 8px;
-    text-align: center;
-    color: var(--secondary);
-}
-
-h1 span {
-    color: #fff;
-}
-
-.header img {
-    width: 40px;
-    height: 45px;
-    position: relative;
-    transform: rotate(20deg);
+.game {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
 }
 
 .board {
@@ -109,10 +121,8 @@ h1 span {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    margin: auto;
-    margin-bottom: 1em;
-    width: 90%;
-    height: 75%;
+    width: 100%;
+    margin-bottom: 2rem;
 }
 
 .dealer {
@@ -125,7 +135,7 @@ h1 span {
     text-align: center;
     color: #fff;
     font-weight: 600;
-    margin-bottom: 5px;
+    margin-bottom: .5rem;
 }
 
 .board div img {
@@ -138,14 +148,15 @@ h1 span {
     display: flex;
     justify-content: space-between;
     align-content: center;
-    width: clamp(250px, 50vw, 800px);
+    gap: 1rem;
+    width: clamp(250px, 45vw, 800px);
 }
 
 button {
     cursor: pointer;
     display: block;
     border: none;
-    outline: none;
+    outline: 3px solid transparent;
     padding: 8px 0;
     width: clamp(100px, 15vw, 400px);
     height: max-content;
@@ -156,13 +167,13 @@ button {
     background-color: var(--secondary);
     border-radius: 3px;
     box-shadow: inset 4px -4px 8px #a38500;
-    transition: outline .1s ease-in;
+    transition: outline .18s ease-in;
 }
 
 #start-page button,
 #end-game button {
     position: relative;
-    color: #1d281ded;
+    color: rgba(0, 0, 0, 0.8);
     width: clamp(150px, 20vw, 400px);
     z-index: 10;
 }
@@ -179,10 +190,9 @@ button:hover {
     justify-content: center;
     align-items: center;
     position: absolute;
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    padding: 10% 0 1.5em 0;
-    background: #1d281dd7;
+    background: rgba(0, 0, 0, 0.7);
     overflow: hidden;
     top: 0;
     left: 0;
@@ -197,7 +207,7 @@ button:hover {
     font-family: 'Heebo', sans-serif;
     color: #ffffffe1;
     font-size: clamp(2rem, 10vw, 4rem);
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
     letter-spacing: 2px;
 }
 
@@ -258,8 +268,10 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 100%;
+    height: 75px;
     width: 100%;
+    max-width: 1480px;
+    margin: auto;
     font-family: sans-serif;
     font-size: clamp(.8rem, 1.2vw, 1rem);
     color: #ffffff30;
@@ -267,17 +279,13 @@ footer {
 }
 
 /* Media Queries */
-@media screen and (max-height: 450px) and (orientation: landscape) {
+@media screen and (max-height: 475px) and (orientation: landscape) {
     body::before {
         background-size: contain;
     }
 
     h1 {
         font-size: clamp(1.5rem, 3vw, 3rem);
-    }
-
-    .board {
-        height: 60%;
     }
 
     .board div img {
@@ -304,7 +312,7 @@ footer {
         background-size: cover;
         filter: invert(0%) opacity(.2);
         position: absolute;
-        max-width: 1500px;
+        max-width: 1480px;
         width: 95%;
         height: 80%;
         top: 50%;
@@ -318,9 +326,12 @@ footer {
         ;
     }
 
+    .container {
+        padding: 2em;
+    }
+
     .board {
         flex-direction: row;
-        height: 65%;
     }
 
     .dealer {
