--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@
     --secondary: #f0c814;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
